# mnist_test

./: CMakeLists.txt  README.md  main.cpp
